# lessbaseDNN

./: CMakeLists.txt  Plugins.md  README.md
core/include/: layer.h  ops.h  optimizer.h  registry.h
core/src/: layer.c  network.c  ops.c  optimizer.c  registry.c  tensor.c
core/tests/full/: mnist.c
examples/: mnist_mlp.c
include/petard/: layer.h  loss.h  network.h  optimizer.h  tensor.h
include/trebuchet/: layer.h  network.h  optimizer.h
src/: autograd.c  layer.c  ops.c  tensor.c
tests/full/: mnist.c  mnist_mlp.c  xor.c
tests/unit/: test_autograd.c  test_layer.c  test_network.c  test_ops.c  test_optimizer.c  test_tensor.c
